<resources>
    <string name="app_name">KelasKu</string>
    <string name="semua">semua</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="jurusan">Jurusan</string>
    <string name="telephone">Telephone</string>
    <string name="no_hp">No Hp</string>
    <string name="pilih_avatar">Pilih Avatar</string>
</resources>