<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.AddBottomSheet">

    <ImageButton
        android:id="@+id/imgbtn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtn_save">

        <EditText
            android:id="@+id/edt_nama_lengkap"
            style="@style/search"
            android:hint="@string/nama_lengkap"
            tools:ignore="RtlHardcoded,UnusedAttribute" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative">

        <EditText
            android:id="@+id/edt_alamat"
            style="@style/search"
            android:hint="@string/alamat"
            tools:ignore="RtlHardcoded,UnusedAttribute" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative1">

        <EditText
            android:id="@+id/edt_nohp"
            style="@style/search"
            android:hint="@string/no_hp"
            tools:ignore="RtlHardcoded,UnusedAttribute" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mont_medium"
        android:text="@string/pilih_avatar"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative2" />

    <ImageView
        android:id="@+id/man1"
        style="@style/ImageAdd"
        android:src="@drawable/man1"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/man1_clicked"
        style="@style/ImageAdd"
        android:visibility="invisible"
        android:src="@drawable/man1_clicked"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/man2"
        style="@style/ImageAdd"
        android:layout_marginStart="16dp"
        android:src="@drawable/man2"
        app:layout_constraintStart_toEndOf="@+id/man1"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/man2_clicked"
        style="@style/ImageAdd"
        android:layout_marginStart="16dp"
        android:src="@drawable/man2_clicked"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/man1"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/man3"
        style="@style/ImageAdd"
        android:layout_marginStart="16dp"
        android:src="@drawable/man3"
        app:layout_constraintStart_toEndOf="@+id/man2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/man3_clicked"
        style="@style/ImageAdd"
        android:layout_marginStart="16dp"
        android:src="@drawable/man3_clicked"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/man2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/man4"
        style="@style/ImageAdd"
        android:layout_marginStart="16dp"
        android:src="@drawable/man4"
        app:layout_constraintStart_toEndOf="@+id/man3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/man4_clicked"
        style="@style/ImageAdd"
        android:layout_marginStart="16dp"
        android:src="@drawable/man4_clicked"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/man3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/man3" />

</androidx.constraintlayout.widget.ConstraintLayout>